wacc/test/golden/syntaxErr.while.whileNodone
# while missing closing done

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  while false do
    skip
end


(line 14, column 1):
  unexpected "end"
  expected ";", done, or end of skip
  >    skip
  >end
   ^^^
  >